--- a/.github/workflows/test-and-build-go-project.yml
+++ b/.github/workflows/test-and-build-go-project.yml
@@ -14,7 +14,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
-        
+
         ports:
           - 5432:5432
 
@@ -23,25 +23,28 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-  
+
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
 
-    - name: Set up Go 1.21.6
-      uses: actions/setup-go@v5.0.0
-      with:
-        go-version: '1.21.6' 
-    - run: go version
-      
-    - name: Get all dependencies based on go.mod
-      run: go mod download
+      - name: Set up Go 1.21.6
+        uses: actions/setup-go@v5.0.0
+        with:
+          go-version: "1.21.6"
+      - run: go version
 
-    - name: Run integration tests
-      run: go test -v ./... 
+      - name: Get all dependencies based on go.mod
+        run: go mod download
 
-    - name: Build and run the webapp
-      run: |
-        go build -o webapp
-        ./webapp
-    
+      - name: Run integration tests
+        run: go test -v ./...
+        env:
+          DB_DSN: ${{ secrets.DB_DSN }}
+
+      - name: Build and run the webapp
+        run: |
+          go build -o webapp
+          ./webapp
+        env:
+          DB_DSN: ${{ secrets.DB_DSN }}
