--- a/.github/workflows/test-and-build-go-project.yml
+++ b/.github/workflows/test-and-build-go-project.yml
@@ -40,11 +40,11 @@ jobs:
       - name: Run integration tests
         run: go test -v ./...
         env:
-          DB_DSN: ${{ secrets.DB_DSN }}
+          DB_DSN: "host=localhost port=5432 user=postgres password=postgres dbname=postgres sslmode=disable"
 
       - name: Build and run the webapp
         run: |
           go build -o webapp
           ./webapp
         env:
-          DB_DSN: ${{ secrets.DB_DSN }}
+          DB_DSN: "host=localhost port=5432 user=postgres password=postgres dbname=postgres sslmode=disable"
