--- a/.github/workflows/test-and-build-go-project.yml
+++ b/.github/workflows/test-and-build-go-project.yml
@@ -46,4 +46,5 @@ jobs:
       - name: Build and run the webapp
         run: |
           go build -o webapp
-          ./webapp
+          nohup ./webapp &
+          echo "Webapp is running in the background"
