fix: Ensure 'webapp' is running before echoing success message

--- a/.github/workflows/test-and-build-go-project.yml
+++ b/.github/workflows/test-and-build-go-project.yml
@@ -47,4 +47,5 @@ jobs:
         run: |
           go build -o webapp
           nohup ./webapp &
+          wait $!
           echo "Webapp is running in the background"
