--- a/.github/workflows/packer-fmt-and-validate.yml
+++ b/.github/workflows/packer-fmt-and-validate.yml
@@ -6,7 +6,7 @@ env:
   PACKER_VERSION: "1.10.1"
 
 jobs:
-  fmt-and-validate-packer:
+  packer-fmt-and-validate:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
