--- a/.github/workflows/packer-fmt-and-validate.yml
+++ b/.github/workflows/packer-fmt-and-validate.yml
@@ -4,6 +4,7 @@ on: pull_request
 
 env:
   PACKER_VERSION: "1.10.1"
+  PROJECT_ID: "my-project-id"
 
 jobs:
   packer-fmt-and-validate:
@@ -28,4 +29,4 @@ jobs:
 
       - name: Run `packer validate`
         id: validate
-        run: packer validate .
+        run: packer validate -var 'project_id=${{env.PROJECT_ID}}'.
