--- a/.github/workflows/packer-build-custom-image.yml
+++ b/.github/workflows/packer-build-custom-image.yml
@@ -6,7 +6,7 @@ on:
       - closed
 
 env:
-  PACKER_VERSION: "1.10.1"      
+  PACKER_VERSION: "1.10.1"
 
 jobs:
   packer-build-custom-image:
@@ -53,7 +53,7 @@ jobs:
       - name: Build the application
         run: go build -o webapp
 
-      - name: Authenticate to Google Cloud via Service Account key
+      - name: Authenticate Packer to Google Cloud via service sccount key
         id: auth
         uses: google-github-actions/auth@v2
         with:
