--- a/.github/workflows/packer-fmt-and-validate.yml
+++ b/.github/workflows/packer-fmt-and-validate.yml
@@ -26,6 +26,9 @@ jobs:
         id: fmt
         run: packer fmt -check .
 
+      - name: Mock app for `packer validate`
+        run: touch webapp
+
       - name: Run `packer validate`
         id: validate
         run: packer validate gcp.pkr.hcl
