--- a/.github/workflows/packer-build-custom-image.yml
+++ b/.github/workflows/packer-build-custom-image.yml
@@ -57,6 +57,9 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.PACKER_SERVICE_ACCOUNT}}
+      
+      - name: Setup `gcloud SDK`
+        uses: google-github-actions/setup-gcloud@v2
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
