--- a/.github/workflows/packer-build-custom-image.yml
+++ b/.github/workflows/packer-build-custom-image.yml
@@ -51,7 +51,9 @@ jobs:
         run: go test -v ./...
 
       - name: Build the application
-        run: GOOS=linux GOARCH=amd64 go build -o webapp
+        run: |
+          GOOS=linux GOARCH=amd64 go build -o webapp
+          echo "Application built successfully"
 
       - name: Authenticate Packer to Google Cloud via service sccount key
         uses: google-github-actions/auth@v2
