--- a/.github/workflows/packer-build-custom-image.yml
+++ b/.github/workflows/packer-build-custom-image.yml
@@ -45,7 +45,15 @@ jobs:
         run: go mod download
 
       - name: Setup environment variables
-        run: echo "DB_DSN=host=localhost port=5432 user=postgres password=postgres dbname=postgres sslmode=disable" >> $GITHUB_ENV
+        run: |
+          { 
+            echo "ENV=github";
+            echo "DB_HOST=localhost"; 
+            echo "DB_PORT=5432"; 
+            echo "DB_USER=postgres"; 
+            echo "DB_PASSWORD=postgres"; 
+            echo "DB_NAME=postgres" 
+          } >> $GITHUB_ENV
 
       - name: Run integration tests
         run: go test -v ./...
@@ -59,7 +67,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.PACKER_SERVICE_ACCOUNT}}
-      
+
       - name: Setup `gcloud SDK`
         uses: google-github-actions/setup-gcloud@v2
 
