--- a/config.yaml
+++ b/config.yaml
@@ -5,13 +5,23 @@ logging:
       include_paths:
         - /tmp/webapp.log
       record_log_file_path: true
+
   processors:
     webapp-processor:
       type: parse_json
       time_key: time
       time_format: "%Y-%m-%dT%H:%M:%S.%L%Z"
+    map-level-to-severity:
+      type: modify_fields
+      fields:
+        severity:
+          copy_from: jsonPayload.level
+          map_values:
+            "info": "INFO"
+            "warning": "WARNING"
+            "error": "ERROR"
   service:
     pipelines:
       default_pipeline:
         receivers: [webapp-receiver]
-        processors: [webapp-processor]
+        processors: [webapp-processor, map-level-to-severity]
