--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ logging:
     webapp-processor:
       type: parse_json
       time_key: time
-      time_format: "%Y-%m-%dT%H:%M:%S.%L%Z"
+      time_format: "%Y-%m-%dT%H:%M:%SZ"
     map-level-to-severity:
       type: modify_fields
       fields:
