--- a/.github/workflows/build-custom-image-and-deploy.yml
+++ b/.github/workflows/build-custom-image-and-deploy.yml
@@ -67,6 +67,9 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.SERVICE_ACCOUNT_FOR_GITHUB_ACTIONS }}
+      
+      - name: Set up gcloud Cloud SDK environment
+        uses: google-github-actions/setup-gcloud@v2
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -78,4 +81,34 @@ jobs:
           packer init .
           packer build .
 
-      
+      # Start update vm instances
+      - name: Create new Instance Template version
+        run: |
+          LATEST_IMAGE=$(gcloud compute images describe-from-family ${{ secrets.IMAGE_FAMILY }} --project=${{ secrets.PROJECT_ID }} --format="get(name)")
+          NEW_TEMPLATE_NAME="instance-template-$(date +%Y%m%d%H%M%S)"
+          gcloud compute instance-templates create ${NEW_TEMPLATE_NAME} \
+            --instance-template-region=${{ secrets.REGION }} \
+            --machine-type=${{ secrets.MACHINE_TYPE }} \
+            --image=${NEW_TEMPLATE_NAME} \
+            --boot-disk-kms-key=${{ secrets.KMS_KEY_FOR_VM }} \
+            --boot-disk-type=${{ secrets.DISK_TYPE }} \
+            --boot-disk-size=${{ secrets.DISK_SIZE }} \
+            --service-account=${{ secrets.SERVICE_ACCOUNT_FOR_GITHUB_ACTIONS }} \
+            --scopes=${{ secrets.SERVICE_ACCOUNT_SCOPES }} \
+            --network=${{ secrets.VPC_NETWORK }} \
+            --subnet=${{ secrets.SUBNET }} \
+            --metadata=startup-script='#!/bin/bash
+              set -e
+              FLAG="APPENDED"
+              ENV_FILE="/opt/myapp/app.properties"
+              if ! grep -q "$FLAG" "$ENV_FILE"; then
+                {
+                  echo "DB_NAME=${{ secrets.DB_NAME }}";
+                  echo "DB_USER=${{ secrets.DB_USER }}";
+                  echo "DB_PORT=${{ secrets.DB_PORT }}";
+                  echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}";
+                  echo "DB_HOST=${{ secrets.DB_HOST }}";
+                  echo "$FLAG"
+                } | sudo tee -a "$ENV_FILE" > /dev/null
+              fi'
+              
