--- a/.github/workflows/build-custom-image-and-deploy.yml
+++ b/.github/workflows/build-custom-image-and-deploy.yml
@@ -71,18 +71,16 @@ jobs:
       - name: Set up gcloud Cloud SDK environment
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Get new template name
-        id: get-new-template-name
-        run: |
-          echo "NEW_TEMPLATE_NAME=instance-template-$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-          cat $GITHUB_ENV
 
+        
       # Start update vm instances
       - name: Create new Instance Template version
         id: create-instance-template
         run: |
           LATEST_IMAGE=$(gcloud compute images describe-from-family ${{ secrets.IMAGE_FAMILY }} --project=${{ secrets.PROJECT_ID }} --format="get(name)")
-          gcloud compute instance-templates create $NEW_TEMPLATE_NAME \
+          new_template_name=instance-template-$(date +%Y%m%d%H%M%S)
+          echo "NEW_TEMPLATE_NAME=$new_template_name" >> $GITHUB_ENV
+          gcloud compute instance-templates create $new_template_name \
             --instance-template-region=${{ secrets.REGION }} \
             --machine-type=${{ secrets.MACHINE_TYPE }} \
             --image=${LATEST_IMAGE} \
