--- a/.github/workflows/build-custom-image-and-deploy.yml
+++ b/.github/workflows/build-custom-image-and-deploy.yml
@@ -71,7 +71,15 @@ jobs:
       - name: Set up gcloud Cloud SDK environment
         uses: google-github-actions/setup-gcloud@v2
 
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        with:
+          version: ${{ env.PACKER_VERSION }}
 
+      - name: Build the custom image using Packer
+        run: |
+          packer init .
+          packer build .
         
       # Start update vm instances
       - name: Create new Instance Template version
